src/test/ui/consts/issue-68542-closure-in-array-len.stderr
error[E0277]: the trait bound `[closure@$DIR/issue-68542-closure-in-array-len.rs:6:14: 6:16]: Fn<()>` is not satisfied
  --> $DIR/issue-68542-closure-in-array-len.rs:6:13
   |
LL |     a: [(); (|| { 0 })()]
   |             ^^^^^^^^^^^^ expected an `Fn<()>` closure, found `[closure@$DIR/issue-68542-closure-in-array-len.rs:6:14: 6:16]`
   |
   = help: the trait `~const Fn<()>` is not implemented for closure `[closure@$DIR/issue-68542-closure-in-array-len.rs:6:14: 6:16]`
note: the trait `Fn<()>` is implemented for `[closure@$DIR/issue-68542-closure-in-array-len.rs:6:14: 6:16]`, but that implementation is not `const`
  --> $DIR/issue-68542-closure-in-array-len.rs:6:13
   |
LL |     a: [(); (|| { 0 })()]
   |             ^^^^^^^^^^^^
   = note: wrap the `[closure@$DIR/issue-68542-closure-in-array-len.rs:6:14: 6:16]` in a closure with no arguments: `|| { /* code */ }`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
